# prez.dev

./: 404.html  CNAME  Dockerfile  README.md  components.json  content.config.ts  index.html  mkdocs.yml  nuxt.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  staticwebapp.config.json
.github/workflows/: deploy.yaml  deploy.yml
app/: app.vue  types.ts
app/components/: AppSidebar.vue  Breadcrumbs.vue  SearchCommand.vue  Sidebar.vue  SidebarContent.vue  TOC.vue  TOCContent.vue  Topnav.vue  TopnavContent.vue
app/layouts/: docs.vue  docs_old.vue  home.vue
app/pages/: [...slug].vue
app/utils/: consts.ts  previewRegistry.ts
assets/: validator.ttl
content/: 1.index.md  2.about.md  3.quickstart.md  4.examples.md
content/kgmanifest/: 1.index.md  2.quickstart.md  model.md  mrr.md  ont.md
content/prez/: 1.index.md  2.quickstart.md  3.features.md  deployment.md  development.md  ogc-features.md
content/prezapi/: 1.index.md  2.quickstart.md  development.md  endpoints.md  fuseki-fts.md  path-aliases.md  result-counting.md
content/prezmanifest/: 1.index.md  2.quickstart.md  model.md  ont.md
content/prezui/: 01.index.md  02.quickstart.md  03.usage.md  04.theming.md  05.prez-components.md  07.prez-lib.md  08.deployment.md  09.upgrade.md  10.development.md
docs/: index.md  manifest.md  mrr.md  ont.md
manifest/: documentor.py  example01.ttl  example02.ttl  example03.ttl  index.html  loader.py  mrr.ttl  ns_mrr.py  ns_olis.py  ns_prez.py  validator.py  validator.ttl
mrr/: index.html
ont/: index.html
search/: search_index.json
stylesheets/: prez.css
(+56 files in other folders)
