[tool.poetry]
name = "prez.dev"
version = "0.1.0"
description = ""
authors = ["Nicholas Car <nick@kurrawong.ai>"]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^8.3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
