[tool.poetry]
name = "prez.dev"
version = "0.1.0"
description = ""
authors = ["Nicholas Car <nick@kurrawong.ai>"]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^8.3.9"
pyshacl = "^0.29.0"
kurrawong = {path = "/Users/nick/work/kurrawong/kurrawong-python", develop = true}

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
